Update, fixed docs

--- a/index.Rmd
+++ b/index.Rmd
@@ -41,7 +41,7 @@ tsplot(mod, start = "2010-02-10", end = "2010-02-20")
 ```
 
 ```{r, echo = FALSE, fig = TRUE, results = 'hide', fig.width = 12, fig.height = 4}
-windrose(mod, type = "histogram", mfcol = 3)
+windrose(mod, type = "histogram", ncol = 3)
 ```
 
 ```{r, echo = FALSE, fig = TRUE, results = 'hide', fig.width = 12, fig.height = 6.5}
